fix modal z-index

--- a/frontend/src/assets/modal.scss
+++ b/frontend/src/assets/modal.scss
@@ -4,7 +4,7 @@
   right: 0;
   top: 0;
   bottom: 0;
-  z-index: 200000;
+  z-index: 500000;
   background: rgba(0, 0, 0, .4);
   overflow-y: auto;
   display: flex;
